--- a/art/index.html
+++ b/art/index.html
@@ -73,7 +73,7 @@
 				<a href="/" class="nav-link">Home</a>
 				<a href="/about" class="nav-link">About</a>
 				<a href="/booking" class="nav-link">Book a Lesson</a>
-				<a href="/commissions" class="nav-link active">Art</a>
+				<a href="/art" class="nav-link active">Art</a>
 			</nav>
 		</div>
 	</header>
