--- a/booking/index.html
+++ b/booking/index.html
@@ -63,7 +63,7 @@
 				<a href="/" class="nav-link">Home</a>
 				<a href="/about" class="nav-link">About</a>
 				<a href="/booking" class="nav-link active">Book a Lesson</a>
-				<a href="/commissions" class="nav-link">Art</a>
+				<a href="/art" class="nav-link">Art</a>
 			</nav>
 		</div>
 	</header>
