--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				<a href="/" class="nav-link active">Home</a>
 				<a href="/about" class="nav-link">About</a>
 				<a href="/booking" class="nav-link">Book a Lesson</a>
-				<a href="/commissions" class="nav-link">Art</a>
+				<a href="/art" class="nav-link">Art</a>
 			</nav>
 		</div>
 	</header>
