--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 	<title>Fly with Damon | Flight Training in Daytona</title>
 	<link rel="icon" type="image/ico" href="/favicon.ico">
-	<link rel="stylesheet" href="/reset.css">
-	<link rel="stylesheet" href="/hamburgers.css">
-	<link rel="stylesheet" href="/style.css">
-	<link rel="stylesheet" href="/overrides.css">
+	<link rel="stylesheet" href="/reset.css?v=1">
+	<link rel="stylesheet" href="/hamburgers.css?v=1">
+	<link rel="stylesheet" href="/style.css?v=1">
+	<link rel="stylesheet" href="/overrides.css?v=1">
 
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
@@ -42,7 +42,7 @@
 <body>
 	<header>
 		<div id="topbar" class="box-shadow">
-			<img src="/images/skychicken-blue.png" id="logo">
+			<img src="/images/skychicken-blue.png" id="logo" height="72px">
 			<h1 id="title" class="special-gothic-expanded-one-regular">Fly with Damon</h1>
 			<button id="hamburger" class="hamburger hamburger--slider">
 				<div class="hamburger-box">
@@ -55,6 +55,7 @@
 				<a href="/" class="nav-link active">Home</a>
 				<a href="/about" class="nav-link">About</a>
 				<a href="/booking" class="nav-link">Book a Lesson</a>
+				<a href="/contact" class="nav-link">Contact</a>
 				<a href="/art" class="nav-link">Art</a>
 			</nav>
 		</div>
@@ -70,34 +71,33 @@
 			<img src="/images/avionics.jpeg" id="avionics" class="article-image">
 			<div class="bio">
 				<p>
-					I’m an independent flight instructor at Air America in Daytona Beach. I can instruct in many different planes, such as the Cessna 172, Pipistrel Alpha, Piper Arrow, and Piper Aztec. I can also instruct you in one of your own!
+					I’m an independent flight instructor at Air America Flight Center in Daytona Beach. I can instruct in many different planes, such as the Cessna 172, Pipistrel Alpha, Piper Arrow, and Piper Aztec. I can also instruct you in one of your own!
 					<br><br>
-					I am currently taking Private and Commercial students. Other services of mine include <b>Biannual Flight Reviews</b> (BFRs) and <b>Instrument Proficiency Checks</b> (IPCS).
+					I am currently taking Private, Commercial, and CFI students. Some of what I offer includes <b>Biannual Flight Reviews</b> (BFRs) and <b>Instrument Proficiency Checks</b> (IPCS).
 					<br><br>
-					Click <a href="https://airamericafc.com/our-fleet-rates/">here</a> to see the available fleet at my flight center.
+					Click <a href="/booking/">here</a> to learn more about my services.
 				</p>
 				<br>
 				<div class="align-center">
-					<a class="button" href="/booking/">Contact Me</a>
 					<a class="button" href="/about/">About Me</a>
 				</div>
 			</div>
 		</div>
 		<br><br>
 		<h2 class="align-center">Hourly Rate: $43/hr</h2>
-		<p class="snippet align-center">Placeholder: I bill based off of flight time and any additional ground training before or after a flight. A typical flying lesson will be 1.3 hours of flying and 0.2 hours of ground training.</p>
+		<p class="snippet align-center">I bill based off of flight time and any additional ground training before or after a flight.</p>
 		<div class="align-center">
 			<a class="button" href="/booking">Book a Lesson</a>
-			<a class="button" href="/lessons/CFI Master Document.pdf">Course Sequence</a>
+			<a class="button" href="/files/CFI Master Document.pdf">Course Sequence</a>
 		</div>
 		<br><br>
 		<img src="/images/cessna-painting.heic" class="article-image" id="painting">
 		<footer>
-			<b><a href="https://airamericafc.com/" class="persistent-link ">Air America Flight Center</a></b> &#8226; 
+			<b><a href="https://airamericafc.com/">Air America Flight Center</a></b> &#8226; 
 			1585 Aviation Center Parkway, Suite 602, Daytona Beach, Florida 32114<br>
-			<a href="https://www.linkedin.com/in/damon-welber-bbb23a2b5/" class="persistent-link  uncolored-link">Linkedin</a> &#8226; 
-			<a href="https://www.instagram.com/wild_nomad_art/" class="persistent-link  uncolored-link">Instagram</a> &#8226; 
-			<a href="/booking/" class="persistent-link uncolored-link">Contact</a>
+			<a href="https://www.linkedin.com/in/damon-welber-bbb23a2b5/" class="uncolored-link">Linkedin</a> &#8226; 
+			<a href="https://www.instagram.com/wild_nomad_art/" class="uncolored-link">Instagram</a> &#8226; 
+			<a href="/booking/" class="uncolored-link">Contact</a>
 		</footer>
 	</div>
 	<script src="/script.js"></script>
