added about page, website complete

--- a/art/index.html
+++ b/art/index.html
@@ -17,11 +17,17 @@
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 	<style>
 		#art-container {
-			height: min(35rem, 44vmax);
-			width: min(35rem, 100%);
+			height: min(32rem, 44vmax);
+			width: min(32rem, 100%);
 			display: flex;
 			flex-direction: row;
 			justify-content: flex-start;
+		}
+		#reveal-contact.button::before {
+			content: 'Order Now';
+		}
+		.text-column {
+			min-width: 300px;
 		}
 	</style>
 </head>
@@ -64,7 +70,7 @@
 				<p>Commission me at my number, email, or <a href="https://www.instagram.com/wild_nomad_art/">Instagram</a> where you can see more of my art.</p>
 				<span class="half-line-break"></span>
 				<div id="contact-interact-wrapper">
-					<button class="button" id="reveal-contact">Order Now</button>
+					<button class="button auto" id="reveal-contact"></button>
 					<div id="contact-text">
 						<p>Email: emailto0000@gmail.com<br>Phone: (555)-555-5555</p>
 					</div>
@@ -79,7 +85,7 @@
 			1585 Aviation Center Parkway, Suite 602, Daytona Beach, Florida 32114<br>
 			<a href="https://www.linkedin.com/in/damon-welber-bbb23a2b5/" class=" uncolored-link">Linkedin</a> &#8226; 
 			<a href="https://www.instagram.com/wild_nomad_art/" class=" uncolored-link">Instagram</a> &#8226; 
-			<a href="/booking/" class="uncolored-link">Contact</a>
+			<a href="/contact/" class="uncolored-link">Contact</a>
 		</footer>
 	</div>
 	<script src="/script.js"></script>
