--- a/contact/index.html
+++ b/contact/index.html
@@ -62,7 +62,7 @@
 				</div>
 				<span class="half-line-break"></span>
 				<div id="contact-interact-wrapper">
-					<button class="button" id="reveal-contact">Reveal Info</button>
+					<button class="button auto" id="reveal-contact"></button>
 					<div id="contact-text">
 						<p>Email: emailto0000@gmail.com<br>Phone: (555)-555-5555</p>
 					</div>
@@ -76,7 +76,7 @@
 			1585 Aviation Center Parkway, Suite 602, Daytona Beach, Florida 32114<br>
 			<a href="https://www.linkedin.com/in/damon-welber-bbb23a2b5/" class=" uncolored-link">Linkedin</a> &#8226; 
 			<a href="https://www.instagram.com/wild_nomad_art/" class=" uncolored-link">Instagram</a> &#8226; 
-			<a href="/booking/" class="uncolored-link">Contact</a>
+			<a href="/contact/" class="uncolored-link">Contact</a>
 		</footer>
 	</div>
 	<script src="/script.js"></script>
