--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
 		}
 		#painting {
 			width: min(100%, 640px);
-			cursor: pointer;
 		}
 	</style>
 </head>
@@ -84,10 +83,10 @@
 			</div>
 		</div>
 		<br><br>
-		<h2 class="align-center">Hourly Rate: $43/hr</h2>
+		<h2 class="align-center">Hourly Rate: $43</h2>
 		<p class="snippet align-center">I bill based off of flight time and any additional ground training before or after a flight.</p>
 		<div class="align-center">
-			<a class="button" href="/booking">Book a Lesson</a>
+			<a class="button" href="/booking#get-in-touch">Book a Lesson</a>
 			<a class="button" href="/files/CFI Master Document.pdf">Course Sequence</a>
 		</div>
 		<br><br>
@@ -97,7 +96,7 @@
 			1585 Aviation Center Parkway, Suite 602, Daytona Beach, Florida 32114<br>
 			<a href="https://www.linkedin.com/in/damon-welber-bbb23a2b5/" class="uncolored-link">Linkedin</a> &#8226; 
 			<a href="https://www.instagram.com/wild_nomad_art/" class="uncolored-link">Instagram</a> &#8226; 
-			<a href="/booking/" class="uncolored-link">Contact</a>
+			<a href="/contact/" class="uncolored-link">Contact</a>
 		</footer>
 	</div>
 	<script src="/script.js"></script>
