fixed typo in about page

--- a/about/index.html
+++ b/about/index.html
@@ -93,7 +93,7 @@
 					</p>
 					<span class="half-line-break"></span>
 					<div class="align-center">
-						<a class="button" href="https://www.linkedin.com/in/damon-welber-bbb23a2b5/">Instagram</a>
+						<a class="button" href="https://www.instagram.com/wild_nomad_art/">Instagram</a>
 						<a class="button" href="https://www.linkedin.com/in/damon-welber-bbb23a2b5">Linkedin</a>
 					</div>
 				</div>
