added link to random planes

--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
 			<a class="button" href="/files/CFI Master Document.pdf">Course Sequence</a>
 		</div>
 		<br><br>
-		<img src="/images/cessna-painting.heic" class="article-image" id="painting">
+		<a href="https://damonwelber.com/randomplanes">
+			<img src="/images/cessna-painting.heic" class="article-image" id="painting">
+		</a>
 		<footer>
 			<b><a href="https://airamericafc.com/">Air America Flight Center</a></b> &#8226; 
 			1585 Aviation Center Parkway, Suite 602, Daytona Beach, Florida 32114<br>
