added site script to random planes

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			<a class="button" href="/files/CFI Master Document.pdf">Course Sequence</a>
 		</div>
 		<br><br>
-		<a href="https://damonwelber.com/randomplanes">
+		<a href="/randomplanes/">
 			<img src="/images/cessna-painting.heic" class="article-image" id="painting">
 		</a>
 		<footer>
