--- a/randomplanes/index.html
+++ b/randomplanes/index.html
@@ -146,7 +146,8 @@ Decades are available, e.g. '2010s'">
 	</footer>
 	</div>
 	<div style="display: none"><img src="./no_image.png"></div>
-	<script src="./script.js"></script>
+	<script src="/script.js"></script>
+	<script src="./planes.js"></script>
 </body>
 
 </html>
