added credit to footer

--- a/about/index.html
+++ b/about/index.html
@@ -89,7 +89,7 @@
 					<p>
 						I am a student at Embry-Riddle, Daytona. At a young age, when I was flown up in a Cirrus SR22 and allowed to steer it, I realized I wanted to dedicate myself to flying. By the time I was 18, I earned my PPL at the quaint Greenwood Lake Airport in New Jersey and went on to get my Commercial License a year later.
 						<br><br>
-						I enjoy making art, with much of my paintings and illustrations being of birds, B-2s, and other aircraft! I also like to game, watch classic movies, and seek thrills by going on roller coasters, hang gliding, or even skydiving.  
+						I enjoy making art, with much of my paintings and illustrations being of birds, B-2s, and other aircraft! I also like to game, watch classic movies, and seek thrills by going on roller coasters, hang gliding, or even skydiving.
 					</p>
 					<span class="half-line-break"></span>
 					<div class="align-center">
@@ -114,9 +114,11 @@
 		<footer>
 			<b><a href="https://airamericafc.com/">Air America Flight Center</a></b> &#8226; 
 			1585 Aviation Center Parkway, Suite 602, Daytona Beach, Florida 32114<br>
-			<a href="https://www.linkedin.com/in/damon-welber-bbb23a2b5/" class=" uncolored-link">Linkedin</a> &#8226; 
-			<a href="https://www.instagram.com/wild_nomad_art/" class=" uncolored-link">Instagram</a> &#8226; 
+			<a href="https://www.linkedin.com/in/damon-welber-bbb23a2b5/" class="uncolored-link">Linkedin</a> &#8226;
+			<a href="https://www.instagram.com/wild_nomad_art/" class="uncolored-link">Instagram</a> &#8226; 
 			<a href="/contact/" class="uncolored-link">Contact</a>
+			<br>
+			<span class="credit">Designed by Khan</span>
 		</footer>
 	</div>
 	<script src="/script.js"></script>
