--- a/contact/index.html
+++ b/contact/index.html
@@ -74,9 +74,11 @@
 		<footer>
 			<b><a href="https://airamericafc.com/">Air America Flight Center</a></b> &#8226; 
 			1585 Aviation Center Parkway, Suite 602, Daytona Beach, Florida 32114<br>
-			<a href="https://www.linkedin.com/in/damon-welber-bbb23a2b5/" class=" uncolored-link">Linkedin</a> &#8226; 
-			<a href="https://www.instagram.com/wild_nomad_art/" class=" uncolored-link">Instagram</a> &#8226; 
+			<a href="https://www.linkedin.com/in/damon-welber-bbb23a2b5/" class="uncolored-link">Linkedin</a> &#8226;
+			<a href="https://www.instagram.com/wild_nomad_art/" class="uncolored-link">Instagram</a> &#8226; 
 			<a href="/contact/" class="uncolored-link">Contact</a>
+			<br>
+			<span class="credit">Designed by Khan</span>
 		</footer>
 	</div>
 	<script src="/script.js"></script>
