improved key wording

--- a/about/index.html
+++ b/about/index.html
@@ -61,7 +61,7 @@
 <body>
 	<header>
 		<div id="topbar" class="box-shadow">
-			<img src="/images/skychicken-blue.png" id="logo" height="72px">
+			<a href="/"><img src="/images/skychicken-blue.png" id="logo" height="72px" title="Fly With Damon | Flight Training in Daytona Beach"></a>
 			<h1 id="title" class="special-gothic-expanded-one-regular">Fly with Damon</h1>
 			<button id="hamburger" class="hamburger hamburger--slider">
 				<div class="hamburger-box">
@@ -87,9 +87,9 @@
 					<h1>About Me</h1>
 					<br>
 					<p>
-						I am a student at Embry-Riddle, Daytona. At a young age, when I was flown up in a Cirrus SR22 and allowed to steer it, I realized I wanted to dedicate myself to flying. By the time I was 18, I earned my PPL at the quaint Greenwood Lake Airport in New Jersey and went on to get my Commercial License a year later.
+						I am an independent flight instructor and student at Embry-Riddle, Daytona. When I was first flown up in a Cirrus SR22 and given the opportunity to steer it at a young age, I realized then and there that I wanted to dedicate myself to flying. By the time I was 18, I earned my Private Pilot License at the quaint Greenwood Lake Airport in New Jersey and went on to get my Commercial License a year later.
 						<br><br>
-						I enjoy making art, with much of my paintings and illustrations being of birds, B-2s, and other aircraft! I also like to game, watch classic movies, and seek thrills by going on roller coasters, hang gliding, or even skydiving.
+						I enjoy making art, with much of my paintings and illustrations being of birds, B-2s, and other aircraft! I also like to game, watch classic movies, and seek thrills in roller coasters, hang gliding, or even skydiving.
 					</p>
 					<span class="half-line-break"></span>
 					<div class="align-center">
