--- a/art/index.html
+++ b/art/index.html
@@ -34,7 +34,7 @@
 <body>
 	<header>
 		<div id="topbar" class="box-shadow">
-			<img src="/images/skychicken-blue.png" id="logo" height="72px">
+			<a href="/"><img src="/images/skychicken-blue.png" id="logo" height="72px" title="Fly With Damon | Flight Training in Daytona Beach"></a>
 			<h1 id="title" class="special-gothic-expanded-one-regular">Fly with Damon</h1>
 			<button id="hamburger" class="hamburger hamburger--slider">
 				<div class="hamburger-box">
@@ -77,7 +77,7 @@
 				</div>
 			</div>
 			<div id="art-container">
-				<img id="art" class="slideshow">
+				<img id="art" class="slideshow" alt="My paintings and digital art of airplanes or birds against scenic backdrops.">
 			</div>
 		</div>
 		<footer>
