--- a/booking/index.html
+++ b/booking/index.html
@@ -60,7 +60,7 @@
 <body>
 	<header>
 		<div id="topbar" class="box-shadow">
-			<img src="/images/skychicken-blue.png" id="logo" height="72px">
+			<a href="/"><img src="/images/skychicken-blue.png" id="logo" height="72px" title="Fly With Damon | Flight Training in Daytona Beach"></a>
 			<h1 id="title" class="special-gothic-expanded-one-regular">Fly with Damon</h1>
 			<button id="hamburger" class="hamburger hamburger--slider">
 				<div class="hamburger-box">
@@ -80,28 +80,28 @@
 	</header>
 
 	<div id="content">
-		<img src="/images/bookalesson2.png" class="banner-cover">
+		<img src="/images/bookalesson2.png" class="banner-cover" alt="Book a Lesson" title="Book a flight lesson in Daytona Beach">
 		<br>
 		<div class="column-wrapper">
 			<div class="cfi-info-div">
 				
 				<h1>Hourly Rate: $43</h1>
 				<br>
-				<h3>I Can Provide:</h3>
+				<h3>As a CFI, I Can Provide:</h3>
 				<span class="half-line-break"></span>
 				<ul>
 					<li>Private, Commercial & CFI Training</li>
 					<li>Written Endorsements</li>
 					<li>Checkride Refreshers</li>
-					<li>Instrument Proficiency Checks</li>
-					<li>Biannual Flight Reviews</li>
+					<li>Instrument Proficiency Checks (IPC)</li>
+					<li>Biannual Flight Reviews (BFR)</li>
 				</ul>
 				<br>
 				<p>I can instruct you in any plane at <a href="https://airamericafc.com/our-fleet-rates/">Air America</a> or one of your own.</p>
 			</div>
 			<div id="slideshow-div">
 				<div id="slideshow-container">
-					<img id="slideshow" class="slideshow" src="/images/slides/1.png">
+					<img id="slideshow" class="slideshow" src="/images/slides/1.png" alt="Pictures of my curriculum as a flight instructor" title="CFI curriculum">
 				</div>
 				<a class="button auto" href="/files/CFI Master Document.pdf">View Course Sequence</a>
 			</div>
@@ -130,7 +130,7 @@
 				</div>
 				</div>
 			</div>
-			<img src="/images/orangesky2.png" id="rainbow">
+			<img src="/images/orangesky2.png" id="rainbow" alt="Plane Flying Against Sunset" title="Book a flight lesson now in Daytona Beach">
 		</div>
 		
 		<footer>
