--- a/contact/index.html
+++ b/contact/index.html
@@ -27,7 +27,7 @@
 <body>
 	<header>
 		<div id="topbar" class="box-shadow">
-			<img src="/images/skychicken-blue.png" id="logo" height="72px">
+			<a href="/"><img src="/images/skychicken-blue.png" id="logo" height="72px" title="Fly With Damon | Flight Training in Daytona Beach"></a>
 			<h1 id="title" class="special-gothic-expanded-one-regular">Fly with Damon</h1>
 			<button id="hamburger" class="hamburger hamburger--slider">
 				<div class="hamburger-box">
@@ -68,7 +68,7 @@
 					</div>
 				</div>
 			</div>
-			<img src="/images/rainbow.jpeg" id="rainbow">
+			<img src="/images/rainbow.jpeg" id="rainbow" alt="A vivid rainbow in the distant over vast, flat farmland as seen out of an airplane window." title="Contact me now so I can book you flight lessons.">
 		</div>
 		
 		<footer>
