--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <body>
 	<header>
 		<div id="topbar" class="box-shadow">
-			<img src="/images/skychicken-blue.png" id="logo" height="72px">
+			<a href="/"><img src="/images/skychicken-blue.png" id="logo" height="72px" title="Fly With Damon | Flight Training in Daytona Beach"></a>
 			<h1 id="title" class="special-gothic-expanded-one-regular">Fly with Damon</h1>
 			<button id="hamburger" class="hamburger hamburger--slider">
 				<div class="hamburger-box">
@@ -61,20 +61,20 @@
 	</header>
 
 	<div id="content">
-		<img src="/images/learntofly2.png" class="banner-small">
+		<img src="/images/learntofly2.png" class="banner-small" alt="Learn to fly in Daytona!" title="Flight Training & Lessons at Daytona Beach">
 
 		<h1 class="push-left align-left">Damon Welber</h1>
 		<h2 class="push-left align-left">CFI</h2>
 		<br>
 		<div id="wrapper">
-			<img src="/images/avionics.jpeg" id="avionics" class="article-image">
+			<img src="/images/avionics.jpeg" id="avionics" class="article-image" alt="CFI looking at avionics">
 			<div class="bio">
 				<p>
 					I’m an independent flight instructor at Air America Flight Center in Daytona Beach. I can instruct in many different planes, such as the Cessna 172, Pipistrel Alpha, Piper Arrow, and Piper Aztec. I can also instruct you in one of your own!
 					<br><br>
 					I am currently taking Private, Commercial, and CFI students. Some of what I offer includes <b>Biannual Flight Reviews</b> (BFRs) and <b>Instrument Proficiency Checks</b> (IPCS).
 					<br><br>
-					Click <a href="/booking/">here</a> to learn more about my services.
+					Click <a href="/booking/">here</a> to learn more about my services as a CFI.
 				</p>
 				<br>
 				<div class="align-center">
